cập nhật thêm model voucher để giảm giá các tour
